change case for k8s

--- a/k8s-service.yml
+++ b/k8s-service.yml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: helloWorld-deployment
+  name: helloworld-deployment
   labels:
     app: helloWorld
 spec:
@@ -26,7 +26,7 @@ spec:
           httpGet:
             path: /hello
             port: http
-            initialDelaySeconds: 5
+          initialDelaySeconds: 5
         readinessProbe:
           httpGet:
             path: /hello
@@ -41,7 +41,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: helloWorld
+  name: helloworld
 spec:
   selector:
     app: helloWorld
@@ -55,14 +55,14 @@ spec:
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: helloWorld-ingress
+  name: helloworld-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /hello
 spec:
   rules:
   - http:
-    paths:
-    - path: /
-      backend:
-        serviceName: helloWorld
-        servicePort: http
+      paths:
+      - path: /
+        backend:
+          serviceName: helloworld
+          servicePort: http
